set userId upong getting the roles
