# HealthCareApiServer/WebApp/client-app/openapi.json
@@ -973,10 +973,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
+                  "$ref": "#/components/schemas/UserAndRoles"
                 }
               }
             }
@@ -1866,6 +1863,31 @@
           "password": {
             "type": "string",
             "minLength": 1
+          }
+        }
+      },
+      "UserAndRoles": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "roles": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
